Fixed: Meters label too close to Angle readout on Ramp tab
forces-and-motion: Changed the default object from crate to file cabinet so that force arrows don't go offscreen by default in the force graphs tab
Fixed: Bouncy does not reset
Fixed: Clear recording does not clear the charts
Fixed a bug that caused the ramp to have partly faded ice
Added a help button to show the instructions again in the game modes
Added record/playback of ice/wood ramp surface
Changed background of friction control panel to green so that controls look like they are in the play area
Added "meters" on the play area ruler
Switched to use applied force play area slider from moving man sim
Start the object so the vectors do not overlap the slider, maybe at -6
Fixed: Handle cleared during playback so that recording halfway through a playback works properly
Fixed: Reset all should clear the charts
Removed piano because vector arrows go offscreen
Fixed: Changing objects causes the chart cursor node to appear when in playback mode
Updated to new chart library
Removed the blue timeline bar for all tabs with charts
Removed gravity force from forces and motion chart
Fixed colors for X,V,A charts
Fixed: Don't let the cursor drag past max time
Fixed a problem where the blue timeline handle could disappear off the right of the screen
Fixed: chart cursors sometimes become disconnected
Added vertical label for chart slider node
Added chart cursor
Connected parallel applied force vertical slider to the model
Connected parallel applied force text box to the model
Removed Coordinates and Energy tabs from the Ramp simulation
# 1.03.68 (41882) Jun 23, 2010
Moved "Ramp" and "Forces and Motion" sims back into same package
Changed the "Go!" button into a button with the same icon as the clock controls play button
Fixed: Made it so that losing an object in the game mode requires the acceleration to be zero, so that an object at the peak of a trajectory up the ramp won't end the round
# 1.03.67 (41358) Jun 2, 2010